--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
+    "redux": "^4.0.5",
     "typescript": "^3.9.5",
     "uuid": "^8.1.0"
   }
