--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --open --mode development",
+    "dev": "webpack-dev-server --mode development",
     "storybook": "start-storybook"
   },
   "repository": {
@@ -25,8 +26,12 @@
     "@babel/preset-react": "^7.10.1",
     "@storybook/react": "^5.3.19",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.6.0",
+    "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
@@ -42,6 +47,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "redux": "^4.0.5",
+    "styled-components": "^5.1.1",
     "typescript": "^3.9.5",
     "uuid": "^8.1.0"
   }
